# jazz_intervals

./: Cargo.toml  README.md
src/: enums.rs  main.rs
src/enums/: direction.rs  interval.rs  note.rs
